corrected spacing

--- a/client/src/styles/landing.css
+++ b/client/src/styles/landing.css
@@ -245,9 +245,8 @@
   width: 40px;
 }
 
-.landingContent article:last-of-type {
-  margin-top: 250px;
-}
+/* landingContent article:last-of-type {
+  margin-top: 250px; */
 
 .landingContent h1 {
   font-size: 3rem;
@@ -271,29 +270,10 @@
   height: 120vh;
 }
 
-.frame {
-  width: 100vw;
-  height: 100vh;
-}
-
-.frame {
-  margin-top: 200px;
-  font-family: Niconne;
-}
-
 #banner {
+  min-width: 380px;
   max-width: 800px;
   height: auto;
   margin: 0 auto;
   position: relative;
 }
-
-#banner img {
-  position: absolute;
-}
-
-/* .animated img {
-  width: 900px;
-  height: 500px;
-  color: black;
-} */
